# rust-web-services

./: .funcignore  .gitignore  Cargo.toml  Justfile  Makefile  README.md  host.json  local.settings.json  products.json  requests.http  rust-web-services.code-workspace
api/: Cargo.toml
api/src/: main.rs
api/src/database/: database.rs  mod.rs  product.rs
api/src/product/: data.rs  mod.rs  product.rs  service.rs
backend/rocket-webservice/: Rocket.toml
backend/rocket-webservice/src/product/: service.rs
backend/warp-webservice/: Cargo.toml
backend/warp-webservice/src/: main.rs
backend/warp-webservice/src/product/: mod.rs  product.rs  service.rs
backend/webservice/: Cargo.toml  Rocket.toml  diesel.toml  products.json
backend/webservice/migrations/2022-01-23-141618_create_products/: up.sql
backend/webservice/src/: main.rs  product.rs
backend/webservice/src/product/: data.rs  mod.rs  product.rs  schema.rs  service.rs
frontend/: Cargo.toml  justfile  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: app.html  main.rs
frontend/src/lib/: SideBar.svelte
frontend/src/lib/data/: products.json
frontend/src/model/: product.js  product.js.map  product.ts
frontend/src/routes/: ProductCard.svelte  index.svelte
frontend/static/: output.css
infra/bicep/: keyvault.bicep  main.bicep  rg.json
infra/local-db/: .env  docker-compose.yaml
products/: function.json
