[package]
name = "webservice"
version = "0.1.0"
edition = "2021"


[dependencies.rocket]
rocket = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]

[dependencies.diesel]
version = "1.4.8"
features = ["mysql","numeric"]

[dependencies.bigdecimal]
bigdecimal = "0.3.0"
features = ["serde"]
